fix alignment of content

--- a/src/components/body/body.module.scss
+++ b/src/components/body/body.module.scss
@@ -20,7 +20,7 @@
   width: 60vw;
   flex-direction: row;
   justify-items: start;
-  justify-content: space-around;
+  justify-content: center;
   align-items: start;
   background-color: rgba(217, 217, 217, 0.08);
 }
